# docktor

./: .coverage  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.optimized  Dockerfile.original  LICENSE  README.md  RULES.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/docktor/: analyzer.py  benchmarker.py  cli.py  optimizer.py  parser.py  reporter.py  types.py
src/docktor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/docktor/rules/: base.py  best_practices.py  performance.py  registry.py  security.py
src/docktor_py.egg-info/: PKG-INFO  requires.txt
tests/: test_analyzer.py  test_benchmarker.py  test_cli.py  test_optimizer.py  test_parser.py
