# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docktor"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
description = "Smart Dockerfile linter, optimizer, and explainer."
readme = "docs/README.md"
license = { file="LICENSE" } # We'll add a LICENSE file later
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/docktor"
"Bug Tracker" = "https://github.com/your-username/docktor/issues"

# This section makes the 'docktor' command available in the shell
[project.scripts]
docktor = "docktor.cli:cli"

# This section defines extra dependencies for development (testing, etc.)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0", # A fast Python linter, great for quality
]